--- a/signature.html
+++ b/signature.html
@@ -16,7 +16,7 @@
         </td>
         <td style="height: 140px; border-left: thin solid #ff92b8; padding-right: 15px;"></td>
         <td style="font-family:inherit; padding:0; margin: auto;">
-          <table style="font-family:inherit" cellpadding="0" cellspacing="0">
+          <table style="width:250px; font-family:inherit" cellpadding="0" cellspacing="0">
             <tbody>
               <tr>
                 <td style="font-family:inherit; padding:0; vertical-align:top;" valign="top">
